Fixed Contrast

--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@ footer {
 }
 
 #footer-info2 {
-    color: yellow;
+    color: #FFFFFF;
 }
 
 #section1, footer {
